Formatting the modified time into a better format

--- a/package.yaml
+++ b/package.yaml
@@ -47,6 +47,7 @@ dependencies:
 - wai
 - foreign-store
 - yesod-table
+- string-conv
 
 # The library contains all of our application code. The executable
 # defined below is just a thin wrapper.
