Switched from yesod-table to yesod-colonade
yesod-table is deprecated, I realized only after I got it working in
this project.

--- a/package.yaml
+++ b/package.yaml
@@ -46,7 +46,9 @@ dependencies:
 - case-insensitive
 - wai
 - foreign-store
-- yesod-table
+- blaze-html
+- colonnade
+- yesod-colonnade
 - string-conv
 
 # The library contains all of our application code. The executable
