--- a/stack.yaml
+++ b/stack.yaml
@@ -40,6 +40,9 @@ packages:
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
 # extra-deps: []
+extra-deps:
+  - colonnade-1.2.0
+  - yesod-colonnade-1.2.0
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
@@ -64,3 +67,4 @@ packages:
 #
 # Allow a newer minor version of GHC than the snapshot specifies
 # compiler-check: newer-minor
+
